--- a/manifest.json
+++ b/manifest.json
@@ -5,6 +5,8 @@
     "display": "standalone",
     "background_color": "#ffffff",
     "theme_color": "#4CAF50",
+    "description": "A progressive Mobile application for managing tree census data."
+
     "icons": [
         {
             "src": "icon-192x192.png",
