--- a/manifest.json
+++ b/manifest.json
@@ -1,22 +1,38 @@
 {
-    "name": "Tree Census App",
-    "short_name": "TreeCensus",
-    "start_url": "https://malatesh1211.github.io/Tree-census-Application/",
-    "display": "standalone",
-    "background_color": "#ffffff",
-    "theme_color": "#4CAF50",
-    "description": "A progressive Mobile application for managing tree census data."
-
-    "icons": [
-        {
-            "src": "icon-192x192.png",
-            "sizes": "192x192",
-            "type": "image/png"
-        },
-        {
-            "src": "icon-512x512.png",
-            "sizes": "512x512",
-            "type": "image/png"
-        }
-    ]
+   "name": "Tree Census App",
+   "short_name": "TreeCensus",
+   "id": "/tree-census",
+   "description": "A progressive web application for managing tree census data.",
+   "start_url": "/",
+   "display": "standalone",
+   "background_color": "#ffffff",
+   "theme_color": "#4CAF50",
+   "orientation": "portrait-primary",
+   "launch_handler": {
+       "client_mode": "navigate-existing"
+   },
+   "screenshots": [
+       {
+           "src": "screenshot1.png",
+           "sizes": "640x480",
+           "type": "image/png"
+       },
+       {
+           "src": "screenshot2.png",
+           "sizes": "1280x720",
+           "type": "image/png"
+       }
+   ],
+   "icons": [
+       {
+           "src": "icon-192x192.png",
+           "sizes": "192x192",
+           "type": "image/png"
+       },
+       {
+           "src": "icon-512x512.png",
+           "sizes": "512x512",
+           "type": "image/png"
+       }
+   ]
 }
