--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
    "short_name": "TreeCensus",
    "id": "/tree-census",
    "description": "A progressive web application for managing tree census data.",
-   "start_url": "malatesh1211.github.io/Tree-census-Application/",
+   "start_url": "https://malatesh1211.github.io/Tree-census-Application/",
    "display": "standalone",
    "display_override": ["window-controls-overlay"],
    "background_color": "#ffffff",
@@ -26,6 +26,18 @@
            }
        ]
    },
+    "icons": [
+        {
+            "src": "icon-192x192.png",
+            "sizes": "192x192",
+            "type": "image/png"
+        },
+        {
+            "src": "icon-512x512.png",
+            "sizes": "512x512",
+            "type": "image/png"
+        }
+    ]
    "handle_links": "preferred",
    "protocol_handlers": [
        {
