--- a/manifest.json
+++ b/manifest.json
@@ -26,18 +26,18 @@
            }
        ]
    },
-    "icons": [
-        {
-            "src": "icon-192x192.png",
-            "sizes": "192x192",
-            "type": "image/png"
-        }
-        {
-            "src": "icon-512x512.png",
-            "sizes": "512x512",
-            "type": "image/png"
-        }
-    ],
+   "icons": [
+       {
+           "src": "icon-192x192.png",
+           "sizes": "192x192",
+           "type": "image/png"
+       },
+       {
+           "src": "icon-512x512.png",
+           "sizes": "512x512",
+           "type": "image/png"
+       }
+   ],
    "handle_links": "preferred",
    "protocol_handlers": [
        {
@@ -61,7 +61,13 @@
            "short_name": "Add",
            "description": "Add a new tree to the census",
            "url": "/add-tree",
-           "icons": [{ "src": "icon-add.png", "sizes": "192x192", "type": "image/png" }]
+           "icons": [
+               {
+                   "src": "icon-add.png",
+                   "sizes": "192x192",
+                   "type": "image/png"
+               }
+           ]
        }
    ],
    "categories": ["utilities", "productivity"],
